; ModuleID = '/home/carl/AnghaBench/kphp-kdb/filesys/extr_filesys-data.c_filesys_symlink.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/filesys/extr_filesys-data.c_filesys_symlink.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.filesys_inode = type { i32 }

@S_IFLNK = common dso_local global i32 0, align 4
@ENOENT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*)* @filesys_symlink to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @filesys_symlink(i8* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.filesys_inode*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = load i32, i32* @S_IFLNK, align 4
  %10 = or i32 511, %9
  %11 = call i32 (...) @getuid()
  %12 = call i32 (...) @getgid()
  %13 = call i64 @filesys_create(i8* %8, i32 %10, i32 %11, i32 %12)
  store i64 %13, i64* %6, align 8
  %14 = load i64, i64* %6, align 8
  %15 = icmp slt i64 %14, 0
  br i1 %15, label %16, label %19

16:                                               ; preds = %2
  %17 = load i32, i32* @ENOENT, align 4
  %18 = sub nsw i32 0, %17
  store i32 %18, i32* %3, align 4
  br label %27

19:                                               ; preds = %2
  %20 = load i64, i64* %6, align 8
  %21 = call %struct.filesys_inode* @get_inode_f(i64 %20, i32 0)
  store %struct.filesys_inode* %21, %struct.filesys_inode** %7, align 8
  %22 = load %struct.filesys_inode*, %struct.filesys_inode** %7, align 8
  %23 = load i8*, i8** %4, align 8
  %24 = call i32 @strlen(i8* %23)
  %25 = load i8*, i8** %4, align 8
  %26 = call i32 @filesys_write(%struct.filesys_inode* %22, i32 0, i32 %24, i8* %25)
  store i32 0, i32* %3, align 4
  br label %27

27:                                               ; preds = %19, %16
  %28 = load i32, i32* %3, align 4
  ret i32 %28
}

declare dso_local i64 @filesys_create(i8*, i32, i32, i32) #1

declare dso_local i32 @getuid(...) #1

declare dso_local i32 @getgid(...) #1

declare dso_local %struct.filesys_inode* @get_inode_f(i64, i32) #1

declare dso_local i32 @filesys_write(%struct.filesys_inode*, i32, i32, i8*) #1

declare dso_local i32 @strlen(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
